[gd_scene load_steps=3 format=3 uid="uid://c3xs4nkbjqfux"]

[ext_resource type="Script" path="res://player/reticle.gd" id="1_hncki"]
[ext_resource type="Script" path="res://player/hud.gd" id="1_jd1kf"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_jd1kf")

[node name="reticle" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hncki")

[node name="reticle_text" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 60.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "SampleText"
horizontal_alignment = 1
vertical_alignment = 1

[node name="dialog_margin" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 310.0
offset_bottom = 438.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="dialog_box" type="VBoxContainer" parent="dialog_margin"]
custom_minimum_size = Vector2(1000, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="speaker_name" type="Label" parent="dialog_margin/dialog_box"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Name"

[node name="speaker_text" type="Label" parent="dialog_margin/dialog_box"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Text"
autowrap_mode = 2
