extends Control

@onready var reticle_text: Label = $reticle_text
@onready var speaker_name: Label = $dialog_margin/dialog_box/speaker_name
@onready var speaker_text: Label = $dialog_margin/dialog_box/speaker_text


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
